--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     {% include 'nav.html' %}
-    <img class='img-fluid' src='https://dc57a68a-1eaa-4c71-979f-03845a406a29-00-3rbpqxtuksdxq.janeway.replit.dev/static/banner.jpeg'></img>
+    <img class='img-fluid' src='/static/banner.jpeg'></img>
     <div class='container'>
       <h1 class="text-center mt-2 mb-4">
         {{company_name}} Careers
