--- a/templates/home.html
+++ b/templates/home.html
@@ -2,48 +2,35 @@
 <html>
   <head>
     <title>Jovian Careers</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-      #banner {
-        height: 360px;
-        width: 100%;
-        object-fit: cover;
-        margin-bottom: 16px;
-      }
-    </style>
+    {% include 'bootstrap.html' %}
   </head>
   <body>
     {% include 'nav.html' %}
-    <img class='img-fluid' src='/static/banner.jpeg'></img>
-    <div class='container'>
+    {% include 'banner.html' %}
+    <div class="container">
       <h1 class="text-center mt-2 mb-4">
-        {{company_name}} Careers
+        Jovian Careers
       </h1>
       <div class="row" style="margin-bottom:32px">
         <div class="col-md-6">
-          <p class='lead'>
-            At Jovian, we’re on a mission to build the most highly reputed technical university in the world, and we’re building it completely online. Our flagship data science program helps working professionals with a background in programming or analytics make a career transition to data science. We also offer several free beginner-friendly courses and have a fast-growing community of 200,000+ users.
-          </p>
+      <p class="lead">
+        At Jovian, we’re on a mission to build the most highly reputed technical university in the world, and we’re building it completely online. Our flagship data science program helps working professionals with a background in programming or analytics make a career transition to data science. We also offer several free beginner-friendly courses and have a fast-growing community of 200,000+ users.
+      </p>
         </div>
-      <div class="d-none d-md-block col-md-6">
+        <div class="d-none d-md-block col-md-6">
         <img src="/static/people.jpeg" style="height:320px;border-radius:4px;">
         </div>
-      </div
-      <h2 class='text-center mt--2 mb-4'>Job Openings</h2>
-      <p>
+      </div>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <div>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
         {% endfor %}
-      </p>
-    </div>
-    <div class='text-center'>
+      </div>
+      <div class="text-center">
       <a class="btn btn-primary btn-lg" href="mailto:hello@jovian.ai?subject=Question%20about%20Job%20Opernings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20questions%3A%20%3Center%20question%20here%3E%0D%0A">Contact Us</a>
-      <p class='mt-4'>
-        Copyright 2025, Jovian
-      </p>
+      </div>
     </div>
-     {% include 'footer.html' %}
+    {% include 'footer.html' %}
   </body>
 </html>
